--- a/app/src/main/res/layout/user_info_item_cell.xml
+++ b/app/src/main/res/layout/user_info_item_cell.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="8dp"
         android:orientation="horizontal">
 
         <TextView
@@ -20,7 +21,7 @@
             android:gravity="center_vertical"
             android:text="개인정보"
             android:textColor="@color/colorBlack"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <TextView
@@ -31,7 +32,7 @@
             android:layout_weight="9"
             android:gravity="right"
             android:text="TextView"
-            android:textSize="20sp" />
+            android:textSize="16sp" />
 
     </LinearLayout>
 
@@ -41,6 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:layout_marginBottom="8dp"
         android:src="@drawable/text_path" />
 
 </LinearLayout>
