--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.UserInfoActivity">
+    tools:context=".activity.UserInfoActivity">
 
     <TextView
         android:id="@+id/userInfo_textView_title"
