--- a/app/src/main/res/layout/stuff_cell.xml
+++ b/app/src/main/res/layout/stuff_cell.xml
@@ -7,28 +7,29 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/adminItemCell_textView_itemEmoji"
-        android:layout_width="0dp"
+        android:id="@+id/stuffCell_textView_Emoji"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="8dp"
-        android:layout_weight="1"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_weight="0"
         android:fontFamily="@font/noto_color_emoji"
         android:gravity="center"
         android:text="☂"
-        android:textColor="@android:color/black"
+        android:textColor="@color/colorBlack"
         android:textSize="32sp" />
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginRight="16dp"
-        android:layout_weight="5"
+        android:layout_weight="4"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/adminItemCell_textView_name"
+            android:id="@+id/stuffCell_textView_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -38,7 +39,7 @@
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/adminItemCell_textView_count"
+            android:id="@+id/stuffCell_textView_count"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -48,20 +49,22 @@
             android:textSize="14sp" />
 
         <TextView
-            android:id="@+id/adminItemCell_textView_id"
+            android:id="@+id/stuffCell_textView_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
             android:visibility="gone" />
     </LinearLayout>
 
-    <!--    <ImageView-->
-    <!--        android:id="@+id/item_imageView_optionMenu"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_gravity="center_vertical"-->
-    <!--        android:layout_margin="8dp"-->
-    <!--        android:layout_weight="0"-->
-    <!--        app:srcCompat="@drawable/ic_more_vert_blue" />-->
+    <Button
+        android:id="@+id/stuffCell_btn_rent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="16dp"
+        android:layout_weight="1"
+        android:text="@string/rent"
+        android:visibility="visible" />
 
 </LinearLayout>
