--- a/app/src/main/res/layout/edit_item_cell.xml
+++ b/app/src/main/res/layout/edit_item_cell.xml
@@ -1,23 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/background_edit_item_cell"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/editItemCell_textView_item"
-            android:layout_width="match_parent"
+            android:id="@+id/editItemCell_textView_itemNum"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="2dp"
+            android:layout_marginRight="8dp"
             android:layout_marginBottom="2dp"
-            android:text="1 이석환(2018008886) 사용 중"
-            android:textSize="20sp" />
+            android:layout_weight="1"
+            android:gravity="start"
+            android:text="1"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/editItemCell_textView_content"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="2dp"
+            android:layout_weight="5"
+            android:text="이석환님에게 대여 됨(연체)"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/editItemCell_textView_date"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="2dp"
+            android:layout_weight="2"
+            android:gravity="end"
+            android:text="MM/DD"
+            android:textSize="18sp" />
 
     </LinearLayout>
 
