--- a/app/src/main/res/layout/info_layout.xml
+++ b/app/src/main/res/layout/info_layout.xml
@@ -7,36 +7,43 @@
     tools:context=".activity.UserInfoActivity">
 
     <TextView
-        android:id="@+id/userInfo_textView_title"
+        android:id="@+id/info_textView_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="@font/yoon_gothic_150"
-        android:text="개인정보"
+        android:text="TextView"
         android:textColor="@color/colorBlack"
         android:textSize="36sp"
-        app:layout_constraintBottom_toTopOf="@+id/userInfo_linear_layout"
+        app:layout_constraintBottom_toTopOf="@+id/info_recyclerView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/userInfo_linear_layout"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/info_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/userInfo_btn_logout"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/info_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userInfo_textView_title">
+        app:layout_constraintTop_toBottomOf="@+id/info_textView_title">
 
-    </LinearLayout>
+    </androidx.recyclerview.widget.RecyclerView>
 
     <Button
-        android:id="@+id/userInfo_btn_logout"
+        android:id="@+id/info_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="로그아웃"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
