--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -78,7 +78,8 @@
                 app:layout_constraintStart_toStartOf="@+id/login_layout_privacyNotice"
                 app:layout_constraintTop_toBottomOf="@+id/login_textView_noticeText" />
 
-            <CheckBox
+            <CheckBox xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/login_checkBox_agree"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -90,11 +91,14 @@
 
             <Button
                 android:id="@+id/login_button_noticeLogin"
+                style="@style/Widget.MaterialComponents.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:text="로그인 하기"
+                android:textColor="@color/colorHanyangWhite"
+                android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/login_layout_privacyNotice"
                 app:layout_constraintStart_toStartOf="@+id/login_layout_privacyNotice"
@@ -102,13 +106,16 @@
 
             <CheckBox
                 android:id="@+id/login_checkBox_disagree"
+                style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:text="동의하지 않습니다."
                 app:layout_constraintEnd_toStartOf="@+id/login_checkBox_agree"
-                app:layout_constraintTop_toBottomOf="@+id/login_textView_details" />
+                app:layout_constraintTop_toBottomOf="@+id/login_textView_details"
+                app:useMaterialThemeColors="false" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -155,11 +162,16 @@
 
             <Button
                 android:id="@+id/login_button_login"
-                android:layout_width="wrap_content"
+                style="@style/Widget.MaterialComponents.Button"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_marginStart="64dp"
+                android:layout_marginEnd="64dp"
                 android:layout_marginTop="16dp"
-                android:text="Button"
+                android:layout_marginBottom="16dp"
+                android:text="로그인 하기"
+                android:textSize="12sp"
+                android:textColor="@color/colorHanyangWhite"
                 android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="@+id/login_layout_login"
                 app:layout_constraintStart_toStartOf="@+id/login_layout_login"
