--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -7,17 +7,6 @@
     android:orientation="vertical"
     tools:context=".activity.StartActivity">
 
-    <FrameLayout
-        android:id="@+id/login_frame_suggest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </FrameLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -35,6 +24,8 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +34,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
-                    android:id="@+id/login_tv_schoolName"
+                    android:id="@+id/start_tv_schoolName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/yoon_gothic_150"
@@ -53,7 +44,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/login_tv_majorName"
+                    android:id="@+id/start_tv_majorName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/yoon_gothic_150"
@@ -63,7 +54,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/login_tv_appName"
+                    android:id="@+id/start_tv_appName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
@@ -82,7 +73,7 @@
             android:layout_weight="8">
 
             <ImageView
-                android:id="@+id/login_cse_logo"
+                android:id="@+id/start_cse_logo"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="16dp"
@@ -99,34 +90,41 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/start_layout_buttonPart"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2">
+            android:layout_weight="2"
+            android:visibility="visible">
 
-            <ImageView
-                android:id="@+id/login_message_box"
-                android:layout_width="0dp"
+            <Button
+                android:id="@+id/start_message_box"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:fontFamily="@font/yoon_gothic_150"
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/login_nine" />
+                android:text="@string/go_to_potal_login"
+                android:textColor="@color/colorHanyangWhite"
+                android:textSize="28sp"
+                android:textStyle="bold"
+                android:visibility="invisible" />
 
-            <TextView
-                android:id="@+id/login_tv_message"
+            <ProgressBar
+                android:id="@+id/start_progressBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/yoon_gothic_150"
-                android:text="@string/go_to_potal_login"
-                android:textColor="@color/colorHanyagWhite"
-                android:textSize="30sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/login_message_box"
-                app:layout_constraintEnd_toEndOf="@+id/login_message_box"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/login_message_box"
-                app:layout_constraintVertical_bias="0.41000003" />
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 
