--- a/app/src/main/res/layout/header_cell.xml
+++ b/app/src/main/res/layout/header_cell.xml
@@ -2,24 +2,42 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="2dp"
+    android:layout_marginBottom="2dp"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/imageView14"
+    <View
+        android:id="@+id/divider"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:src="@drawable/text_path" />
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider" />
 
-    <TextView
-        android:id="@+id/listHeaderCell_textView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/yoon_gothic_150"
-        android:gravity="center_vertical"
-        android:paddingLeft="0dp"
-        android:text="연체됨"
-        android:textColor="@color/colorBlack"
-        android:textSize="24sp" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/listHeaderCell_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/yoon_gothic_150"
+            android:gravity="center_vertical"
+            android:paddingLeft="0dp"
+            android:text="연체됨"
+            android:textColor="@color/colorBlack"
+            android:textSize="18sp" />
+
+        <CheckBox
+            android:id="@+id/listHeaderCell_hider"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:button="@drawable/checkbox_hider"
+            android:visibility="invisible"
+            android:buttonTint="@color/colorDisableGray"
+            />
+    </LinearLayout>
+
+
 </LinearLayout>
