--- a/app/src/main/res/layout/history_cell.xml
+++ b/app/src/main/res/layout/history_cell.xml
@@ -15,7 +15,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/cardview_compat_inset_shadow"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
             android:layout_weight="4"
             android:orientation="vertical">
 
@@ -42,14 +43,16 @@
 
         <Button
             android:id="@+id/historyCell_btn_btn"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="88dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginRight="0dp"
             android:layout_marginBottom="8dp"
-            android:layout_weight="1"
-            android:text="확인" />
+            android:layout_weight="0"
+            android:text="확인"
+            android:textSize="12sp" />
 
     </LinearLayout>
 </LinearLayout>
