--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#004989</color>
+<!--    <color name="colorPrimary">#008577</color>-->
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorBlack">#000000</color>
     <color name="colorHanyangBlue">#004989</color>
-    <color name="colorHanyagWhite">#FFFFFF</color>
+    <color name="colorHanyangWhite">#FFFFFF</color>
     <color name="colorUsedGreen">#92CBC5</color>
     <color name="colorWarnRed"> #B92D00 </color>
-    <color name="colorDisableGray">#BDBDBD</color>
+    <color name="colorDisableGray">#999999</color>
+    <drawable name="btnGray">#D6D7D7</drawable>
+    <drawable name="btnGrayOnClick">#BCBDBD</drawable>
+    <drawable name="btnGrayDisabled"></drawable>
+
 </resources>
