--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -126,7 +126,9 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
             android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/login_layout_part"
             app:layout_constraintStart_toStartOf="@+id/login_layout_part"
             app:layout_constraintTop_toTopOf="@+id/login_layout_part">
@@ -134,7 +136,7 @@
             <EditText
                 android:id="@+id/login_editText_id"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
@@ -148,7 +150,7 @@
             <EditText
                 android:id="@+id/login_editText_password"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
@@ -166,12 +168,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="64dp"
-                android:layout_marginEnd="64dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="64dp"
                 android:layout_marginBottom="16dp"
                 android:text="로그인 하기"
-                android:textSize="12sp"
                 android:textColor="@color/colorHanyangWhite"
+                android:textSize="12sp"
                 android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="@+id/login_layout_login"
                 app:layout_constraintStart_toStartOf="@+id/login_layout_login"
