--- a/app/src/main/res/layout/stuff_cell.xml
+++ b/app/src/main/res/layout/stuff_cell.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/stuffCell_textView_Emoji"
-        android:layout_width="80dp"
+        android:layout_width="72dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="0dp"
@@ -22,10 +22,10 @@
         android:textSize="32sp" />
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_weight="4"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <TextView
@@ -58,9 +58,9 @@
 
     <Button
         android:id="@+id/stuffCell_btn_rent"
-        android:layout_width="56dp"
+        android:layout_width="64dp"
         android:layout_height="40dp"
-        android:layout_gravity="center_vertical"
+        android:layout_gravity="center"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginRight="0dp"
@@ -69,7 +69,6 @@
         android:text="@string/rent"
         android:textColor="@color/colorHanyangWhite"
         android:textSize="12sp"
-        android:visibility="visible"
-        />
+        android:visibility="visible" />
 
 </LinearLayout>
